# RetroWaveMIDIProxy

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake.yml
cmake/: PatchFile.cmake
patch/: 00-adlmidi-nuke-midisequencer-private.patch
